Fixed spacing for subheader

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -5,7 +5,7 @@
 .dropdown {
 
     @include tablet {
-        width: 75%;
+        width: 90%;
     }
 
     @include desktop {
