--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -106,6 +106,13 @@
         }
     }
 
+    &__note {
+        font-size: 0.6rem;
+        font-style: italic;
+        font-family: 'Poppins';
+        font-weight: 100;
+    }
+
     &__subheader {
         margin: 0;
         color:#648cb6;
@@ -163,6 +170,7 @@
         cursor: pointer;
         width: 100%;
         font-weight: 600;
+        text-align: center;
 
         @include tablet {
             font-size: 1.2rem;
